--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,11 @@ ENV/
 .idea/
 # VS-Code
 .vscode/
+vscode.code-workspace
 
 # node_modules
 node_modules/
+package-lock.json
+style-bundle.js
+
+*.old/
