--- a/material.io/package.json
+++ b/material.io/package.json
@@ -18,9 +18,11 @@
         "@material/drawer": "^0.36.1",
         "@material/elevation": "^0.36.1",
         "@material/fab": "^0.37.0",
+        "@material/form-field": "^0.37.0",
         "@material/layout-grid": "^0.34.0",
         "@material/line-ripple": "^0.35.0",
         "@material/list": "^0.37.0",
+        "@material/radio": "^0.37.0",
         "@material/ripple": "^0.37.0",
         "@material/select": "^0.37.0",
         "@material/textfield": "^0.37.0",
