--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ python:
   - "3.7"
 services: postgresql
 
-env:
+addons:
+  postgresql: "9.6"
+
+  env:
   global:
     - DJANGO_SETTINGS_MODULE="pyVerein.settings.travis"
     - PYTHONPATH="/home/travis/build/hamburgerjungejr/pyVerein"
