--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: python
 python:
   - "3.5"
   - "3.6"
+
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
+      
 services: postgresql
 
 addons:
