--- a/material.io/package.json
+++ b/material.io/package.json
@@ -4,13 +4,15 @@
         "babel-core": "^6.26.3",
         "babel-loader": "^7.1.5",
         "babel-preset-es2015": "^6.24.1",
-        "css-loader": "^1.0.0",
+        "css-loader": "^1.0.1",
         "extract-loader": "^2.0.1",
         "file-loader": "^1.1.11",
-        "node-sass": "^4.9.1",
+        "node-sass": "^4.10.0",
         "postcss-loader": "^2.1.5",
-        "sass-loader": "^7.0.3",
-        "webpack": "^3.12.0"
+        "sass-loader": "^7.1.0",
+        "webpack": "^3.12.0",
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^2.11.3"
     },
     "dependencies": {
         "@material/button": "^0.37.0",
@@ -31,6 +33,7 @@
         "@material/theme": "^0.35.0",
         "@material/top-app-bar": "^0.37.0",
         "@material/typography": "^0.35.0",
-        "material-design-icons": "^3.0.1"
+        "material-design-icons": "^3.0.1",
+        "npx": "^10.2.0"
     }
 }
