--- a/material.io/package.json
+++ b/material.io/package.json
@@ -7,32 +7,35 @@
         "css-loader": "^1.0.1",
         "extract-loader": "^2.0.1",
         "file-loader": "^1.1.11",
-        "node-sass": "^4.10.0",
-        "postcss-loader": "^2.1.5",
+        "node-sass": "^4.11.0",
+        "postcss-loader": "^2.1.6",
         "sass-loader": "^7.1.0",
         "webpack": "^3.12.0",
         "webpack-cli": "^3.1.2",
         "webpack-dev-server": "^2.11.3"
     },
     "dependencies": {
-        "@material/button": "^0.37.0",
-        "@material/card": "^0.39.1",
-        "@material/checkbox": "^0.37.1",
-        "@material/dialog": "^0.37.0",
-        "@material/drawer": "^0.36.1",
-        "@material/elevation": "^0.36.1",
-        "@material/fab": "^0.37.0",
-        "@material/form-field": "^0.37.0",
-        "@material/layout-grid": "^0.34.0",
-        "@material/line-ripple": "^0.35.0",
-        "@material/list": "^0.37.0",
-        "@material/radio": "^0.37.0",
-        "@material/ripple": "^0.37.0",
-        "@material/select": "^0.37.0",
-        "@material/textfield": "^0.37.0",
-        "@material/theme": "^0.35.0",
-        "@material/top-app-bar": "^0.37.0",
-        "@material/typography": "^0.35.0",
+        "@material/button": "^0.42.0",
+        "@material/card": "^0.42.0",
+        "@material/checkbox": "^0.42.0",
+        "@material/dialog": "^0.42.0",
+        "@material/drawer": "^0.42.0",
+        "@material/elevation": "^0.41.0",
+        "@material/fab": "^0.42.0",
+        "@material/form-field": "^0.42.0",
+        "@material/layout-grid": "^0.41.0",
+        "@material/line-ripple": "^0.41.0",
+        "@material/list": "^0.42.0",
+        "@material/menu": "^0.42.0",
+        "@material/menu-surface": "^0.42.0",
+        "@material/radio": "^0.42.0",
+        "@material/ripple": "^0.42.0",
+        "@material/select": "^0.42.0",
+        "@material/textfield": "^0.42.0",
+        "@material/theme": "^0.41.0",
+        "@material/top-app-bar": "^0.42.0",
+        "@material/typography": "^0.42.0",
+        "cosmiconfig": "^5.0.7",
         "material-design-icons": "^3.0.1",
         "npx": "^10.2.0"
     }
