--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -9,3 +9,4 @@ django-author>=1.0.2,<1.1
 Pillow>=5.2.0,<5.3
 pyreportjasper>=1.0,<1.1
 django-sendfile2>=0.4,<0.5
+django-separatedvaluesfield>=0.6,<0.7
