--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -9,3 +9,4 @@ Pillow>=5.2.0,<5.3
 django-sendfile2>=0.4,<0.5
 django-separatedvaluesfield>=0.6,<0.7
 https://github.com/HamburgerJungeJr/pyreportjasper/archive/master.zip
+django-two-factor-auth>=1.8,<1.9
