--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -7,6 +7,7 @@ six>=1.11.0,<1.12
 django-author>=1.0.2,<1.1
 Pillow>=5.2.0,<5.3
 django-sendfile2>=0.4,<0.5
-django-separatedvaluesfield>=0.6,<0.7
+https://github.com/ulule/django-separatedvaluesfield/archive/master.zip
 https://github.com/HamburgerJungeJr/pyreportjasper/archive/master.zip
 django-two-factor-auth>=1.8,<1.9
+django-simple-history>=2.7.0,<2.8
