Changed Custom_Translations to Customization

--- a/.gitignore
+++ b/.gitignore
@@ -113,4 +113,7 @@ style-bundle.js
 *.old/
 media/*
 
-**/custom_translations/**/LC_MESSAGES/*
+#!customization/
+**/customization/**/*
+!apps.py
+!__init__.py
